F&GDEV/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Type_Custom__c</fullName>
        <description>For reporting purposes only.</description>
        <label>Activity Type Custom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Outcome__c</fullName>
        <description>This field is for the Sale Team to log the outcome of each call they make. Requested by Gary Sorensen.</description>
        <inlineHelpText>Select the outcome of the most recent phone contact attempt.</inlineHelpText>
        <label>Call Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calls_To_Action__c</fullName>
        <description>The result of the meeting and any CTAs.</description>
        <inlineHelpText>What was the result of the meeting and/or are there any resulting calls to action?</inlineHelpText>
        <label>Calls To Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contracting/Licensing</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Illustration Software</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Sales Materials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Guid__c</fullName>
        <description>Unique ID for HubSpot related Tasks</description>
        <label>Guid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyActivityID__c</fullName>
        <externalId>true</externalId>
        <label>OMFN Legacy Activity ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>An explanation (255 characters max) of what occurred during this activity.</description>
        <inlineHelpText>An explanation (255 characters max) of what occurred during this activity.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annuity</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Custom__c</fullName>
        <formula>IF(CONTAINS(Subject, &quot;Email&quot;), &quot;Email&quot;,
IF(CONTAINS(Subject, &quot;Call&quot;), &quot;Call&quot;,
IF(CONTAINS(Subject, &quot;VM&quot;), &quot;Call&quot;,
IF(CONTAINS(Subject, &quot;Voice mail&quot;), &quot;Call&quot;,
IF(CONTAINS(Subject, &quot;Voicemail&quot;), &quot;Call&quot;,
IF(CONTAINS(Subject, &quot;Webinar&quot;), &quot;Webinar&quot;,
IF(CONTAINS(Subject, &quot;Mtg&quot;), &quot;Meeting&quot;,
IF(CONTAINS(Subject, &quot;Meeting&quot;), &quot;Meeting&quot;, &quot;Unknown&quot;))))))))</formula>
        <label>Subject Custom</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>